--- a/pages/submit.html
+++ b/pages/submit.html
@@ -548,10 +548,10 @@ input[type=checkbox] {
         infringement and you WILL be banned.</p>
       <br>
       <hr style="width: 50%; border: 0;height: 1px;background-image: linear-gradient(to right, #110F12, #ccc, #110F12);">
-      <h2>Pen Name*</h2>
+      <!-- <h2>Pen Name*</h2>
       <input id="penname" required="" type="text">
       <div>
-        <hr style="position: relative;left: -10px; border: 0;height: 2px;background-image: linear-gradient(to right, #ccc, #ccc, #110F12);"></div>
+        <hr style="position: relative;left: -10px; border: 0;height: 2px;background-image: linear-gradient(to right, #ccc, #ccc, #110F12);"></div> -->
       <h2>Title of Story*</h2>
       <input id="title" maxlength="50px" required="" type="text">
       <div>
